--- a/index.html
+++ b/index.html
@@ -464,7 +464,6 @@
                 alt="add" width="298px" height="167px">
         </div>
     </section>
-    <hr class="f_hr">
     <section>
         <!-- This is section 5 -->
     </section>
@@ -494,6 +493,7 @@
     </section>
 
     <!-- Made by reeta -->
+    <div class="merge_sec"></div>
     <div class="first"> </div>
     <div class="one">
         <h1>World of Wonder</h1>
@@ -841,9 +841,11 @@
             <span class="go">5 days ago</span><span>NEWS  Future</span><br>
         </div>
     </div>
+</div>
 
     <!-- Made by Saloni -->
 
+    <hr class="f_hr">
     <footer class="foot">
         <div class="bbc-logo logo">
             <img src="https://th.bing.com/th/id/R.305ba4ba6a7380328398958f7d5dd549?rik=pOrCh%2bWR2atAyg&riu=http%3a%2f%2fatticacommunications.com%2fwp-content%2fuploads%2f2019%2f04%2fbbc-logo-png-transparent.png&ehk=0mdyVI15jsEbzMTHIuGzo2aGb1CYLRCzZcuurmDwd7I%3d&risl=&pid=ImgRaw&r=0"
