--- a/index.html
+++ b/index.html
@@ -380,64 +380,27 @@
                 <div class="time">
                     <span>11 hrs ago | Europe</span>
                 </div>
-    <div class="culture">
-        <div class="">
-            <p>Culture</p>
-        </div>
-        <div class="in-culture-1">
-            <div>
-                <h3>Alexei Navalny's memoir to <br>be published in October</h3><br>
-                <p>The anti-corruption campaigner began work on his book <br>while recovering from his 2020 poisoning.</p><br><br>
-                <p class="see-more">See more</p>
             </div>
-            <div>
-                <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/F886/production/_133122636_mediaitem133122632.jpg.webp" alt="Alexei">
-            </div>
-        </div>
-        <div class="in-culture-2">
-            <div>
-                <h3>JK Rowling reignites row <br>with Harry Potter starts</h2><br>
-                <p><span style="opacity: 0.7;">19 hrs ago</span><span style="font-weight: bold;">| NEWS </span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
-            </div>
-            <div>
-                <h3>Taylor Swift's music <br>returns to TikTok</h2><br>
-                <p><span style="opacity: 0.7;">10 hrs ago</span><span style="font-weight: bold;">| NEWS</span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
-            </div>
-            <div>
-                <h3>Civil War's warning about <br>the US political divide</h2><br>
-                <p><span style="opacity: 0.7;">16 hrs ago | Culture</span></p>
-            </div>
-            <div>
-                <h3>Stars say Fallout TV show <br>brought games to life</h2><br>
-                <p><span style="opacity: 0.7;">16 hrs ago</span><span style="font-weight: bold;">| NEWS</span><span style="opacity: 0.7;">Newsbeat</span></p>
-            </div>
-            <div>
-                <h3>Margot Robbie's company <br>to produce Monopoly film</h2><br>
-                <p><span style="opacity: 0.7;">1 day ago</span><span style="font-weight: bold;">| NEWS</span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
-            </div>
-        </div>
-    </div>
-  </div>
-            <div class="news_1">
-                <div class="fr_img">
-                    <img src="https://ichef.bbci.co.uk/images/ic/320x180/p0hn9cn9.jpg.webp
+        <div class="news_1">
+            <div class="fr_img">
+                <img src="https://ichef.bbci.co.uk/images/ic/320x180/p0hn9cn9.jpg.webp
                     alt=" img-2" width="298" height="167">
-                </div>
-                <div class="fr_icon">
-                    <i class="fa-solid fa-play"></i>
-                </div>
-                <div class="heading_s fr">
-                    <h2 class="center_cap"><a href="">Slovenia's remote bedroom on top of a snowy mountain</a></h2>
-                </div>
-                <div class="para fr">
-                    <span>
-                        Eva Zu Beck heads to the Slovenian mountains. she vists the country's refuges.
-                    </span>
-                </div>
-                <div class="time">
-                    <span>11 hrs ago | Europe</span>
-                </div>
             </div>
+            <div class="fr_icon">
+                <i class="fa-solid fa-play"></i>
+            </div>
+            <div class="heading_s fr">
+                <h2 class="center_cap"><a href="">Slovenia's remote bedroom on top of a snowy mountain</a></h2>
+            </div>
+            <div class="para fr">
+                <span>
+                    Eva Zu Beck heads to the Slovenian mountains. she vists the country's refuges.
+                </span>
+            </div>
+            <div class="time">
+                <span>11 hrs ago | Europe</span>
+            </div>
+        </div>
         </div>
     </section>
     <hr class="f_hr hr">
@@ -499,18 +462,6 @@
             <img src="https://img.3lift.com/?width=890&height=500&url=%2F%2Fimages.3lift.com%2F18527220.jpg&logo_exclude=&lp=NW&v=15&logo=%2F%2Fimages.3lift.com%2F18527217.png&logo_x_pct=3&logo_y_pct=3"
                 alt="add" width="298px" height="167px">
         </div>
-    </section>
-    <section>
-        <!-- This is section 5 -->
-    </section>
-    <section>
-        <!-- This is section 6 -->
-    </section>
-    <section>
-        <!-- This is section 7 -->
-    </section>
-    <section>
-        <!-- This is section 8 -->
     </section>
     <!-- Made by Radhika -->
 
@@ -908,14 +859,16 @@
                 </div>
                 <div class="sport-news-content">
                     <div class="soprt-text">
-                        <div >
+                        <div>
                             <h2>
                                 Raphinha upstages Mbappe as Barca kids break records
                             </h2>
                         </div>
                         <div>
                             <p>
-                                Kylian Mbappe flatters to deceive as a youthful Barcelona side showed plenty of strength in adversity in coming back to beat Paris St-Germain in their Champions League quarter-final first leg.
+                                Kylian Mbappe flatters to deceive as a youthful Barcelona side showed plenty of strength
+                                in adversity in coming back to beat Paris St-Germain in their Champions League
+                                quarter-final first leg.
                             </p>
                         </div>
                         <div class="BTN">
@@ -926,7 +879,8 @@
                     </div>
                     <div class="sport-image">
                         <div>
-                            <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/14ED0/production/_133121758_8bdf9968-d564-4be5-b8b3-5532d93be40a.jpg.webp" alt="">
+                            <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/14ED0/production/_133121758_8bdf9968-d564-4be5-b8b3-5532d93be40a.jpg.webp"
+                                alt="">
                         </div>
                     </div>
                 </div>
@@ -944,33 +898,39 @@
         <div class="two">
             <img class="photo" src="./image/my1.webp" alt="image">
             <h1 class="two1">How a fictitious 'sea' became a<br> top attraction</h1><br>
-            <p style="font-size: 20px; color:white;">The Maldives' famous Sea of Stars is<br> part fact, part fiction-but that just<br> adds to the mystery of one of the<br> country's top tourist attractions</p>
-            <br><span class="go1">8 days ago</span><span>Travel</span><br><br> 
-            <hr>  
+            <p style="font-size: 20px; color:white;">The Maldives' famous Sea of Stars is<br> part fact, part
+                fiction-but that just<br> adds to the mystery of one of the<br> country's top tourist attractions</p>
+            <br><span class="go1">8 days ago</span><span>Travel</span><br><br>
+            <hr>
         </div>
         <div class="two5">
             <img class="photo" src="./image/image2.webp" alt="image">
             <h1 class="two1">Where to see spring tulips in <br>the Netherlands</h1><br>
-            <p style="font-size: 20px; color:white;">Nienke Panis-Ringersma has made a<br> career out of following the region's <br>famous blooms. Here are her favourite <br>ways to experience the season, from<br> road trips to bulb picking.</p>
-            <br><span class="go1">31 Mar 2024</span><span>Travel</span><br><br> 
-            <hr>  
+            <p style="font-size: 20px; color:white;">Nienke Panis-Ringersma has made a<br> career out of following the
+                region's <br>famous blooms. Here are her favourite <br>ways to experience the season, from<br> road
+                trips to bulb picking.</p>
+            <br><span class="go1">31 Mar 2024</span><span>Travel</span><br><br>
+            <hr>
         </div>
         <div>
             <div class="two5">
                 <img class="photo" src="./image/image3.webp" alt="image">
                 <h1 class="two1">Botswana's inspirational<br> women safari guides navigating<br> change</h1><br>
-                <p style="font-size: 20px;color:white;">A remarkable shift is reshaping the<br> traditional landscape of piloting iconic<br> canoes in one of Africa's most <br>extraordinary places - a role that has<br> long been the domain of men.</p>
-                <br><span class="go1">19 Mar 2024</span><span>Travel</span><br><br> 
-                <hr>  
+                <p style="font-size: 20px;color:white;">A remarkable shift is reshaping the<br> traditional landscape of
+                    piloting iconic<br> canoes in one of Africa's most <br>extraordinary places - a role that has<br>
+                    long been the domain of men.</p>
+                <br><span class="go1">19 Mar 2024</span><span>Travel</span><br><br>
+                <hr>
             </div>
         </div>
         <div>
             <div class="two5">
                 <img class="photo" src="./image/image4.webp" alt="image">
                 <h1 class="two1">Photos from the deep sea show '<br>exciting' new species</h1><br>
-                <p style="font-size: 20px;color:white;">Scientists exploring the ocean off the<br> New Zealand coast believe they have <br>discovered 100 new marine species.</p>
-                <br><span class="go1">14 Mar 2024</span><span>Natural wonders</span><br> <br> 
-                <hr>  
+                <p style="font-size: 20px;color:white;">Scientists exploring the ocean off the<br> New Zealand coast
+                    believe they have <br>discovered 100 new marine species.</p>
+                <br><span class="go1">14 Mar 2024</span><span>Natural wonders</span><br> <br>
+                <hr>
             </div>
         </div>
     </div>
@@ -980,13 +940,15 @@
             <h1>Sign up for newsletters</h1>
             <img class="photo1" src="./image/image6.jpeg" alt="image">
             <h1 class="nam">US Election Unspun</h1>
-            <p class="num">Cut through the spin with North America correspondent Anthony Zurcher - in your inbox<br> every Wednesday.</p><br>
+            <p class="num">Cut through the spin with North America correspondent Anthony Zurcher - in your inbox<br>
+                every Wednesday.</p><br>
             <hr>
         </div>
         <div class="second4">
             <img class="photo2" src="./image/image7.webp" alt="image">
             <h1 class="nam">In History</h1>
-            <p class="num">Discover the headlines from this week in history. See the past come to life through the BBC's unique archive, in your inbox every Thursday.
+            <p class="num">Discover the headlines from this week in history. See the past come to life through the BBC's
+                unique archive, in your inbox every Thursday.
             </p><br>
             <hr><br><br><br>
         </div>
@@ -997,7 +959,7 @@
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >US and Canada news</h2>
+    <h2 class="the0">US and Canada news</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1017,13 +979,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >UK news</h2>
+    <h2 class="the0">UK news</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1043,13 +1005,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Business</h2>
+    <h2 class="the0">Business</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1069,13 +1031,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Business</h2>
+    <h2 class="the0">Business</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1095,13 +1057,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Culture</h2>
+    <h2 class="the0">Culture</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1121,13 +1083,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Sport</h2>
+    <h2 class="the0">Sport</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1147,7 +1109,7 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div class="num3">
@@ -1156,7 +1118,7 @@
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Climate solutions</h2>
+    <h2 class="the0">Climate solutions</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1176,13 +1138,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Technology</h2>
+    <h2 class="the0">Technology</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1202,13 +1164,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Science and health</h2>
+    <h2 class="the0">Science and health</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1228,13 +1190,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >World's Table</h2>
+    <h2 class="the0">World's Table</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1254,13 +1216,13 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
     <div>
         <div class="first10"> </div>
     </div>
-    <h2 class="the0" >Travel</h2>
+    <h2 class="the0">Travel</h2>
     <div class="the1">
         <div class="the">
             <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
@@ -1280,14 +1242,14 @@
         </div>
         <div class="the">
             <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
-            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+            <span class="go">5 days ago</span><span>NEWS Future</span><br>
         </div>
     </div>
-</div>
+    </div>
 
     <!-- Made by Saloni -->
 
-    <hr class="f_hr">
+    <hr class="f_hr fr_hr">
     <footer class="foot">
         <div class="bbc-logo logo">
             <img src="https://th.bing.com/th/id/R.305ba4ba6a7380328398958f7d5dd549?rik=pOrCh%2bWR2atAyg&riu=http%3a%2f%2fatticacommunications.com%2fwp-content%2fuploads%2f2019%2f04%2fbbc-logo-png-transparent.png&ehk=0mdyVI15jsEbzMTHIuGzo2aGb1CYLRCzZcuurmDwd7I%3d&risl=&pid=ImgRaw&r=0"
