--- a/news1/index.html
+++ b/news1/index.html
@@ -486,7 +486,7 @@
                         </div>
                     </div>
                     <div class="most_img">
-                        <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/3A97/production/_133099941_gettyimages-2147328267.jpg.webp"
+                        <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/15C23/production/_133132198_gettyimages-1245362182.jpg.webp"
                             alt="img-2" width="298" height="167">
                     </div>
                 </div>
@@ -513,7 +513,7 @@
                         </div>
                     </div>
                     <div class="most_img">
-                        <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/3A97/production/_133099941_gettyimages-2147328267.jpg.webp"
+                        <img src="https://ichef.bbci.co.uk/images/ic/1024xn/p0hq7pgy.jpg.webp.webp"
                             alt="img-2" width="298" height="167">
                     </div>
                 </div>
@@ -541,7 +541,7 @@
                         </div>
                     </div>
                     <div class="most_img">
-                        <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/3A97/production/_133099941_gettyimages-2147328267.jpg.webp"
+                        <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/5dcd/live/148b3360-f816-11ee-8e9d-717411f1d2c4.jpg.webp"
                             alt="img-2" width="298" height="167">
                     </div>
                 </div>
@@ -569,7 +569,7 @@
                         </div>
                     </div>
                     <div class="most_img">
-                        <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/3A97/production/_133099941_gettyimages-2147328267.jpg.webp"
+                        <img src="https://ichef.bbci.co.uk/news/1536/cpsprodpb/09d1/live/29d77330-f8c7-11ee-9eab-33971fb90603.jpg.webp"
                             alt="img-2" width="298" height="167">
                     </div>
                 </div>
