--- a/travel/index.html
+++ b/travel/index.html
@@ -29,13 +29,13 @@
         </header>
         <nav class="navbar">
             <ul class="ul">
-                <li class="list"><a href="" class="home">Home</a></li>
-                <li class="list"><a href="">News</a></li>
+                <li class="list"><a href="./index.html" class="home">Home</a></li>
+                <li class="list"><a href="/News/index.html">News</a></li>
                 <li class="list"><a href="">Sports</a></li>
                 <li class="list"><a href="">Bussiness</a></li>
                 <li class="list"><a href="">Innovation</a></li>
                 <li class="list"><a href="">Culture</a></li>
-                <li class="list"><a href="">Travel</a></li>
+                <li class="list"><a href="/travel/index.html">Travel</a></li>
                 <li class="list"><a href="">Earth</a></li>
                 <li class="list"><a href="" class="video">Video</a></li>
                 <li class="list"><a href="">Live</a></li>
