--- a/travel/index.html
+++ b/travel/index.html
@@ -42,13 +42,23 @@
             </ul>
         </nav>
     </section>
+    <section class="second-nav">
+        <div>
+            <ul class="nav-list">
+                <li class="list1">Destinations</li>
+                <li class="list1"> World’s Table </li>
+                <li class="list1">Culture & Experiences</li>
+                <li class="list1">Adventures</li>
+                <li class="list1">The SpeciaList</li>
+            </ul>
+        </div>
+    </section>
 
     <div class="main">
         <header class="headding">
             <h1>Travel</h1>
             <hr class="hr">
         </header>
-
         <section>
             <div class="image-container">
                 <img class="image" src="https://ichef.bbci.co.uk/images/ic/1920x1080/p0hm8vdd.jpg.webp" alt="">
