--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <div class="time">
                     <span>11 hrs ago | Europe</span>
                 </div>
-                <div class="culture">
+                <!-- <div class="culture">
                     <div class="">
                         <p>Culture</p>
                     </div>
@@ -422,7 +422,7 @@
                                         NEWS</span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="news_1">
                 <div class="fr_img">
