--- a/index.html
+++ b/index.html
@@ -380,54 +380,11 @@
                 <div class="time">
                     <span>11 hrs ago | Europe</span>
                 </div>
-                <!-- <div class="culture">
-                    <div class="">
-                        <p>Culture</p>
-                    </div>
-                    <div class="in-culture-1">
-                        <div>
-                            <h3>Alexei Navalny's memoir to <br>be published in October</h3><br>
-                            <p>The anti-corruption campaigner began work on his book <br>while recovering from his 2020
-                                poisoning.</p><br><br>
-                            <p class="see-more">See more</p>
-                        </div>
-                        <div>
-                            <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/F886/production/_133122636_mediaitem133122632.jpg.webp"
-                                alt="Alexei">
-                        </div>
-                    </div>
-                    <div class="in-culture-2">
-                        <div>
-                            <h3>JK Rowling reignites row <br>with Harry Potter starts</h2><br>
-                                <p><span style="opacity: 0.7;">19 hrs ago</span><span style="font-weight: bold;">| NEWS
-                                    </span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
-                        </div>
-                        <div>
-                            <h3>Taylor Swift's music <br>returns to TikTok</h2><br>
-                                <p><span style="opacity: 0.7;">10 hrs ago</span><span style="font-weight: bold;">|
-                                        NEWS</span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
-                        </div>
-                        <div>
-                            <h3>Civil War's warning about <br>the US political divide</h2><br>
-                                <p><span style="opacity: 0.7;">16 hrs ago | Culture</span></p>
-                        </div>
-                        <div>
-                            <h3>Stars say Fallout TV show <br>brought games to life</h2><br>
-                                <p><span style="opacity: 0.7;">16 hrs ago</span><span style="font-weight: bold;">|
-                                        NEWS</span><span style="opacity: 0.7;">Newsbeat</span></p>
-                        </div>
-                        <div>
-                            <h3>Margot Robbie's company <br>to produce Monopoly film</h2><br>
-                                <p><span style="opacity: 0.7;">1 day ago</span><span style="font-weight: bold;">|
-                                        NEWS</span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
             <div class="news_1">
                 <div class="fr_img">
-                    <img src="https://ichef.bbci.co.uk/images/ic/320x180/p0hn9cn9.jpg.webp
-                    alt=" img-2" width="298" height="167">
+                    <img src="https://ichef.bbci.co.uk/images/ic/320x180/p0hn9cn9.jpg.webp"
+                    alt=  class= width="298" height="167">
                 </div>
                 <div class="fr_icon">
                     <i class="fa-solid fa-play"></i>
