--- a/news2/index.html
+++ b/news2/index.html
@@ -22,27 +22,27 @@
         </div>
         <hr>
         <div class="watch">
-            <img src="watch.jpg" alt="">
+            <img src="./images/watch.jpg" alt="">
         </div>
     </div>
     <h1 style="margin-left: 250px; font-size: 45px;">Culture</h1>
     <div class="culture">
         <!-- <hr> -->
         <div class="left">
-            <img style="width: 300px; height: 200px;" src="left1.webp" alt="">
+            <img style="width: 300px; height: 200px;" src="./images/left1.webp" alt="">
             <h3>Rebel Wilson book delayed in UK <br>and Australia</h3><br>
             <p>The actress's autobiography was due out in <br> Australia on Wednesday and the UK on <br> Thursday.</p>
             <br>
             <p><span style="opacity: 0.8;">5 hrs ago </span><span style="font-weight: bold;">| NEWS</span><span
                     style="opacity: 0.8;"> Entertainment & Arts</span></p>
-            <img style="width: 300px; height: 200px;" src="left2.jpg.webp" alt="">
+            <img style="width: 300px; height: 200px;" src="./images/left2.jpg.webp" alt="">
             <h3>10 films that could win Oscars in <br>2025</h3><br>
             <p>From Gladiator 2 and Nosferatu to Furiosa: <br> A Mad Max Saga, these are the films that <br> BBC Culture
                 predicts will win big at next <br> year's Academy Awards.</p><br>
             <p style="opacity: 0.8;">2 days ago | culture</p>
         </div>
         <div class="middle">
-            <img style="width: 650px; height: 400px;" src="middle.webp" alt="">
+            <img style="width: 650px; height: 400px;" src="./images/middle.webp" alt="">
             <h1 style="font-size: 40px; letter-spacing: 2px; font-weight: 200px;">Riplay is 'the Hitchcock series
                 <br>Hitchcock never made'
             </h1><br>
@@ -50,13 +50,13 @@
                 adaptation of patricia Highsmith's classic novel The Talented Mr Ripley.</p>
         </div>
         <div class="right">
-            <img style="width: 300px; height: 200px; margin-left: 20px;" src="right1.webp" alt="">
+            <img style="width: 300px; height: 200px; margin-left: 20px;" src="./images/right1.webp" alt="">
             <h3 style="margin-left: 20px;">The micro-budget film that changed <br>sci-fi forever</h3><br>
             <p style="margin-left: 20px;">In the early 70s, young filmmakers John <br> Carpenter and Dan O'Bannon
                 created a <br> spaceship tale for a graduation project – little <br> knowing it would influence Alien
                 and many <br> other works.</p><br>
             <p style="opacity: 0.7; margin-left: 20px;">2 days ago | culture</p><br>
-            <img style="width: 300px; height: 200px; margin-left: 20px;" src="right2.webp" alt="">
+            <img style="width: 300px; height: 200px; margin-left: 20px;" src="./images/right2.webp" alt="">
             <h3 style="margin-left: 20px;">Euphoria star wants to stop playing <br>trans roles</h3><br>
             <p style="margin-left: 20px;">Hunter Schafer says she does not want being <br> transgender to be "the
                 centrepiece to what <br> I'm doing".</p><br>
@@ -65,12 +65,12 @@
         </div>
     </div>
     <div class="britist">
-        <img src="britist.jpeg" alt="">
+        <img src="./images/britist.jpeg" alt="">
     </div><br>
     <div class="filmtv"><br>
         <h2>Film and TV</h2><br>
         <div class="image">
-            <img style="width: 800px; height: 500px;" src="image.webp" alt="">
+            <img style="width: 800px; height: 500px;" src="./images/image.webp" alt="">
             <div class="imageright">
                 <h1>Is Sex and the City <br>'problematic' in 2024?</h1><br>
                 <p>The classic HBO show about four female friends has <br>
@@ -107,7 +107,7 @@
         <h2>Latest entertainment news</h2><br>
         <div class="news1">
             <div class="news1-1">
-                <img style="width: 300px;" src="anaya.webp" alt="">
+                <img style="width: 300px;" src="./images/anaya.webp" alt="">
                 <h3>Anya Taylor-Joy confirms secret <br>wedding in 2022</h3><br>
                 <p>The Queen's Gambit star confirms she <br>
                     married her partner Malcolm McRae two <br>
@@ -115,7 +115,7 @@
                 <span style="opacity: 0.7;">2 days ago</span><span> | NEWS </span><span>Entertainment & Arts</span>
             </div>
             <div class="news1-2">
-                <img style="width: 300px;" src="katie.webp" alt="">
+                <img style="width: 300px;" src="./images/katie.webp" alt="">
                 <h3>Katie Price low-calorie diet advert <br>banned</h3><br>
                 <p>The social media post irresponsibly <br>
                     promoted a diet that fell below 800 calories <br>
@@ -124,7 +124,7 @@
                     style="opacity: 0.7;">Entertainment & Arts</span>
             </div>
             <div class="news1-3">
-                <img style="width: 300px;" src="dunst.webp" alt="">
+                <img style="width: 300px;" src="./images/dunst.webp" alt="">
                 <h3>Dunst:'I didn't even think to ask for <br> equal pay'</h3><br>
                 <p>Now starring in Alex Garlind film Civil War, <br> she says she experienced "major pay <br>
                     disparity" as a young star.</p><br>
@@ -132,12 +132,12 @@
                     style="opacity: 0.7;">Entertainment & Arts</span>
             </div>
             <div class="news1-4">
-                <img src="britist2.jpeg" alt="">
+                <img src="./images/britist2.jpeg" alt="">
             </div>
         </div><br>
         <div class="news2">
             <div class="news2-1">
-                <img style="width: 300px;" src="spiderman.webp" alt="">
+                <img style="width: 300px;" src="./images/spiderman.webp" alt="">
                 <h3>Spiderman star on Hollywood's<br>gender pay gap</h3><br>
                 <p>Kirstan Dunst reveals why she never <br>
                     Challenged being paid less than her male co- <br>star</p><br>
@@ -146,7 +146,7 @@
 
             </div>
             <div class="news2-2">
-                <img style="width: 300px;" src="alternative.webp" alt="">
+                <img style="width: 300px;" src="./images/alternative.webp" alt="">
                 <h3>'Alternative Nobel Prize' winner <br>Maryse Conde` dies</h3><br>
                 <p>The acclaimed author won an award set up <br> in place of the scandal-hit Nobel Literature <br> Prize
                     in 2018.</p><br>
@@ -155,7 +155,7 @@
 
             </div>
             <div class="news2-3">
-                <img style="width: 300px;" src="steve.webp" alt="">
+                <img style="width: 300px;" src="./images/steve.webp" alt="">
                 <h3>Steve Wright's Love Songs to <br>continue with new host</h3><br>
                 <p>Michael Ball is new host of the popular <br>request show established by Steve Wright, <br>who died in
                     February.</p><br>
@@ -263,7 +263,7 @@
             <p>33 of the best books of 2023</p><br>
             <p style="opacity: 0.7;">29 Dec 2023 | Culture</p>
         </div>
-        <div class="aboutrecom-6">
+        <div class="aboutrecom-6">             
             <p>33 of the best books of 2023</p><br>
             <p style="opacity: 0.7;">29 Dec 2023 | Culture</p>
         </div>
@@ -522,8 +522,8 @@
         <hr><br>
     </div><br><br>
     <div class="scrol">
-        <div class="num"><h2 style="opacity: 0.7;"><</h2></div>
-        <div class="numone"><h2>1</h2></div>
+        <div class="num"><h2 style="opacity: 0.7;"><</h2></div>          
+        <div class="numone"><h2>1</h2></div>    
         <div class="num"><h2>2</h2></div>
         <div class="num"><h2>3</h2></div>
         <div class="num"><h2>4</h2></div>
