--- a/travel/index.html
+++ b/travel/index.html
@@ -1368,7 +1368,7 @@
                     </p>
                 </div>
                 <div class="more-travel-image">
-                    <img class="more-image"
+                    <img 
                         src="https://ichef.bbci.co.uk/news/480/cpsprodpb/16A7B/production/_126559729_pic.jpg.webp"
                         alt="">
                 </div>
